--- a/test.html
+++ b/test.html
@@ -4,9 +4,10 @@
     </head>
 
     <body>
-        <h1>Hello World</h1>
-        <body>
+        <h1>Hello, World!</h1>
+        <h2>Hello, World!</h2>
+        <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam quam fugiat neque quaerat illum corporis ex eos tempore debitis mollitia eum deleniti earum laudantium culpa, aut officia similique officiis voluptas.
-        </body>
+        </p>
     </body>
 </html>
